# personal-ai

./: .gitignore  README.md  pyproject.toml
anthropic/: dspy.ipynb
guidance/: oai.ipynb
huggingface/: inference.ipynb  multilingual_ner.ipynb
ollama/: dspy.ipynb
outlines/: 01_openai.ipynb
representations/: ControlVectors.ipynb
rl/: 01_egreedy.ipynb  02_statevalue.ipynb  03_actionvalue.ipynb  04_mc.ipynb
