[tool.poetry]
name = "personal-ai"
version = "0.1.0"
description = "A personal repository for experimenting with new AI approaches"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^2.19.1"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
ipywidgets = "^8.1.2"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
