[tool.poetry]
name = "personal-ai"
version = "0.1.0"
description = "A personal repository for experimenting with new AI approaches"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
datasets = "2.14.6"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
ipywidgets = "^8.1.2"
torch = "^2.3.0"
scikit-learn = "^1.5.0"
dspy-ai = "^2.4.9"
transformers = "^4.41.1"
accelerate = "^0.30.1"
guidance = "^0.1.16"
python-dotenv = "^1.0.1"
dspy = "^2.5.15"
huggingface-hub = "^0.26.1"
gym = "^0.26.2"
outlines = {extras = ["openai"], version = "^0.2.1"}


[tool.poetry.group.dev.dependencies]
banditsbook = "^0.1.1"
matplotlib = "^3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
